--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toast Notification</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="buttons">
+      <button>Success</button>
+      <button>Error</button>
+      <button>Invalid</button>
+
+      <div id="toastBox"></div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
